COMP-3892 Add App and Env tags

--- a/cfn/configs/customembed/us-east-1/config.yml
+++ b/cfn/configs/customembed/us-east-1/config.yml
@@ -1,5 +1,8 @@
 template: cfn/templates/static-site.yml
 stack_name: static-site-customembed-prod
+tag_file:
+  - cfn/configs/tags/global.yml
+  - cfn/configs/tags/prod.yml
 region: us-east-1
 context:
   name: customembed
